[project]
name = "duckdb-atp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
    "streamlit-searchbox>=0.1.23",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
